--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>IntellaFeed</title>
     <!-- Bootstrap -->
     <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.1.1/css/bootstrap.min.css" rel="stylesheet"></link>
     <style type="text/css">
@@ -41,20 +41,15 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">OST Project</a>
+          </button>
+          <a class="brand" href="#">IntellaFeed</a>
           <div class="nav-collapse collapse">
-            <p class="navbar-text pull-right">
-              Hello, {{ user }} | 
-              <a href="{{ logout_url }}" class="navbar-link">Logout</a>
-            </p>
-            
             <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
+              <li><a href="#settings">Settings</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
