--- a/templates/settings.html
+++ b/templates/settings.html
@@ -27,7 +27,7 @@
       function addAnotherItem() {
         itemId = numItems + 1;
         var htmlStr = "<div class=\"control-group\" id=\"cg-" + itemId + "\">" +
-                          "<div class=\"controls\">" + 
+                          "<div class=\"controls\" style=\"margin-left:50px;\">" + 
                             "<input type=\"text\"  class=\"input-xlarge\" name=\"item" + itemId + "\" id=\"inputItem" + itemId + "\" placeholder=\"Feed URL\">" +
                           "</div>" +
                           "</div>";
@@ -49,7 +49,7 @@
           <a class="brand" href="/">IntellaFeed</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="#settings">Settings</a></li>
+              <li><a href="/settings">Settings</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
